--- a/_sass/0-settings/_variables.scss
+++ b/_sass/0-settings/_variables.scss
@@ -19,7 +19,7 @@ $brand-color: #f6b141;
 $dark: #393e46;
 $gray: #bbbbbb;
 $light-gray: #e6eef0;
-$white: #ffffff;
+$white: #d8e2dc;
 $black: #000000;
 
 // Background Colors
